2022-07-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/tbl/table.cpp (table::do_bottom): Avoid
	overprinting a double-boxed table's bottom border on nroff
	devices.

2022-07-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Expand regression test for Savannah #49490.  Check for
	overlap of double box borders, too.

	* src/preproc/tbl/tests/\
	do-not-overlap-bottom-border-in-nroff.sh: Do it.

2022-07-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Fix Savannah #49390.

	* src/preproc/tbl/table.cpp (table::do_bottom): Avoid
	overprinting a boxed table's bottom border on nroff devices.

	Fixes <https://savannah.gnu.org/bugs/?49390>.  Thanks to Osamu
	Sayama for the report.

2022-07-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Regression-test Savannah #49390.

	* src/preproc/tbl/tests/\
	do-not-overlap-bottom-border-in-nroff.sh: Do it.
	* src/preproc/tbl/tbl.am (tbl_TESTS): Run test.

2022-07-28  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[gropdf]: Improve slant application to lowercase Greek letters.
	<https://lists.gnu.org/archive/html/groff/2022-07/msg00210.html>

	* tmac/pdf.tmac: Slant only if the glyph is sourced from a
	special font, not a regular (text) font containing Greek glyphs.

2022-07-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac: Add italic correction support to `I` and `BI`
	macros.  Call `par*define-font-macro` with newly recognized
	third argument indicating that italic corrections should be
	applied.
	(par*define-font-macro): Apply the corrections if directed.

2022-07-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (input_char_description): Clear
	static buffer on every entry to the function so that calling it
	twice in succession where the second call populates the buffer
	with less data doesn't return leftover garbage characters.
	Problem appears to date back to 1991 or earlier.
