@@ -163,6 +163,7 @@ tmac_TESTS = \
   tmac/tests/an_MR-works.sh \
   tmac/tests/an_TH-repairs-ad-damage.sh \
   tmac/tests/an_TH-repairs-hy-damage.sh \
+  tmac/tests/an_TS-adds-no-vertical-space.sh \
   tmac/tests/an_TS-do-not-keep-tables-when-cR-set.sh \
   tmac/tests/an_X-register-works.sh \
   tmac/tests/an_avoid-two-font-denial-of-service.sh \
